--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -5,7 +5,7 @@
 :root {
   /* --- Paleta de Colores --- */
   // Base
-  --color-fondo: #1843cf;
+  --color-fondo: #000000;
   --color-fondo-secundario: #E8ECF1;
   --color-blanco: #FFFFFF;
 
