--- a/scss/main.css
+++ b/scss/main.css
@@ -4,7 +4,7 @@
    ========================================================================== */
 :root {
   /* --- Paleta de Colores --- */
-  --color-fondo: #000000;
+  --color-fondo: #eedfdf89;
   --color-fondo-secundario: #E8ECF1;
   --color-blanco: #FFFFFF;
   --color-texto: #2C3E50;
